Z-index fix

--- a/assets/styles/components/_sections.scss
+++ b/assets/styles/components/_sections.scss
@@ -189,7 +189,6 @@
 
 .section--top-stains {
     position: relative;
-    z-index: -1;
 
     &::before {
         @extend %bg-stain;
