--- a/assets/styles/layouts/canvas-magazine/_navigations.scss
+++ b/assets/styles/layouts/canvas-magazine/_navigations.scss
@@ -5,6 +5,7 @@
 
     @include min-screen($desktop) {
         margin: 0;
+        z-index: 1;
     }
 }
 
